--- a/index_ajax_version.html
+++ b/index_ajax_version.html
@@ -4,15 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>Document</title>
 </head>
 <body>
     <div id="app">
-
+        <main class="container">
+            <div class="row">     
+                <div class="box" v-for="(disc, index) in discs">
+                    <img :src="disc.poster" :alt="disc.author">
+                    <h2>{{disc.title}}</h2>
+                    <div class="text">{{disc.author}}</div>
+                    <div class="text">{{disc.gender}}</div>
+                    <div class="text">{{disc.year}}</div>
+                </div>
+            </div>
+    
+        </main>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="main.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
